--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,20 @@
+@import '../assets/scss/all';
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background: #333;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+
+.root{
+  background: #000;
+  height: 100vh;
 }
 
 a {
@@ -12,5 +23,6 @@ a {
 }
 
 * {
+  font-size: 1.2rem ;
   box-sizing: border-box;
 }
